fix transition-visibility ava edit

--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -6,8 +6,9 @@
   align-items: center;
   cursor: pointer;
 }
-
-.profile__image:hover::before {
+.profile__image::before {
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   top: 0;
   left: 0;
@@ -18,6 +19,11 @@
   background-image: url(../../../images/Edit-ico.svg);
   background-repeat: no-repeat;
   background-position: center;
+  transition: visibility 0.3s, opacity 0.3s linear;
+}
+.profile__image:hover::before {
+  visibility: visible;
+  opacity: 1;
 }
 @media screen and (max-width: 700px) {
   .profile__image {
